packages/f5-ai/moderator/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cai-moderator
  namespace: f5-ai-moderator
spec:
  parentRefs:
    - name: cluster-gw # kpt-set: ${shared-gateway-name}
      namespace: shared-services # kpt-set: ${shared-gateway-namespace}
      sectionName: f5-ai # kpt-set: ${shared-gateway-listener-name}
  rules:
    - name: auth
      matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: cai-moderator
          port: 8080
    - name: default
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cai-moderator
          port: 5500
